Version 0.14.0
- Improve decryption memory usage.
- Fixes key expiration dates.

Version 0.13.0
- Fixes issue where expirationData value was missing for expired keys. Fixes #120.
- Improves logging setup by respecting PGP_LOG_LEVEL setting.
- Updates cryptography engine.

Version 0.12.3
- No more NSException is returned. Check for error or or return status instead.
- Use NS_NOESCAPE for Objective-C and Swift.

Version 0.12.2
- Fixes multiple users keys certificates support. Fixes #113

Version 0.12.1
- By convention, the subkeys provide encryption services if flags doesn't specify otherwise.

Version 0.12.0
- Adds Elgamal support.
- Improves reading armored messages.
- API: Exposes primaryUser for the key.

Version 0.11.0
- Fixes signature verification bypass (CM-02-003)
- Fixes dearmoring ignores unknown characters (CM-02-004)
- Fixes armored header-footer bug (CM-02-005)
- Fixes handling of unexpected packets (CM-02-007)
- Fixes crash in `-[PGPKeyring importKey:fromPath:]`

Version 0.10.0
- Adds Symmetrically Encrypted Data Packet support. Fixes #91
- Adds multikey signatures.
- Adds Symmetric-Key Encrypted Session Key Packets support.
- Adds TwoFish cipher support.
- Adds ability to determine keys that a message has been encrypted.
- Adds support for custom OpenPGP CFB mode used in Symmetrically Encrypted Data Packets. Fixes #99
- Improves decryption and signed messages validation.
- Improves "gnu-dummy" GPG extension support.
- Fixes partial length packets calculations.
- Fixes reading armored messages without checksum.
- Fixes password protected DSA keys support. #106
- API: Refactor and simplyfy public API of `ObjectivePGP` due to internal improvements.
- API: PGPPartialKeyPublic -> PGPKeyTypePublic
- API: PGPPartialKeySecret -> PGPKeyTypeSecret
- API: Introduces PGPKeyring.

Version 0.9.5
- Methods that get keys as parameter are now class methods, +[ObjectivePGP ...]
- Adds decrypt:usingKeys:....
- Adds Blowfish cipher support.