@@ -1,3 +1,6 @@
+- Fixes key expiration dates (again).
+- Detect and reject malformed packets.
+
 Version 0.14.0
 - Improve decryption memory usage.
 - Fixes key expiration dates.
